--- a/.github/workflows/ci-macOS.yml
+++ b/.github/workflows/ci-macOS.yml
@@ -1,21 +1,24 @@
-name: MacOS Ventura Swift Release CI
+name: MacOS CI
 
 on:
   push:
-    branches: [develop, main]
+    branches: [development, main]
   pull_request:
-    branches: [develop, main]
+    branches: [development, main]
 
 jobs:
-
-  exec-mac13-ci-release:
-    runs-on: macos-13
+  build_macos:
+    strategy:
+      matrix:
+        os: [macos-13]
+        build_mode: ["debug", "release"]
+    name: Swift ${{ matrix.build_mode }} CI for ${{ matrix.os }}
+    runs-on: ${{ matrix.os }}
 
     steps:
-      - uses: swift-actions/setup-swift@v1
+      - uses: maxim-lobanov/setup-xcode@v1
         with:
-          swift-version: "5.7"
-
+          xcode-version: latest
       #- name: Install guunits
       #  uses: mipalgu/install-guunits@main
 
@@ -30,8 +33,8 @@ jobs:
       #- name: Reconfigure Private Repo URLs
       #  run: sed -i 's/git@github.com:/https:\/\/${{ secrets.ACCESS_TOKEN }}@github.com\//g' Package.swift
 
-      - name: Release build
-        run: swift build -c release
+      - name: build
+        run: swift build -c ${{ matrix.build_mode }}
 
-      - name: Release Test
-        run: swift test -c release
+      - name: Test
+        run: swift test -c ${{ matrix.build_mode }}
