--- a/.github/workflows/ci-windows.yml
+++ b/.github/workflows/ci-windows.yml
@@ -96,4 +96,4 @@ jobs:
         run: swift build -c ${{ matrix.build_mode }} -Xlinker %SDKROOT%\usr\lib\swift\windows\x86_64\swiftCore.lib
 
       - name: Test
-        run: swift test -c ${{ matrix.build_mode }} -Xlinker %SDKROOT%\usr\lib\swift\windows\x86_64\swiftCore.lib
+        run: swift test -c ${{ matrix.build_mode }}
