--- a/.github/workflows/ci-windows.yml
+++ b/.github/workflows/ci-windows.yml
@@ -57,7 +57,7 @@ name: Windows CI
 
 on:
   push:
-    branches: [development, main]
+    branches: [windows, development, main]
   pull_request:
     branches: [development, main]
 
