--- a/.github/workflows/api-stability.yml
+++ b/.github/workflows/api-stability.yml
@@ -41,5 +41,7 @@ jobs:
       #  run: sed -i 's/git@github.com:/https:\/\/${{ secrets.ACCESS_TOKEN }}@github.com\//g' Package.swift
 
       - name: Check API Stability 
-        run: swift package diagnose-api-breaking-changes `git tag | sort --version-sort | tail -n1`
+        run: |
+          tag=$(git tag | sort --version-sort | tail -n1)
+          swift package diagnose-api-breaking-changes $tag
 
