--- a/.github/workflows/api-stability.yml
+++ b/.github/workflows/api-stability.yml
@@ -41,8 +41,5 @@ jobs:
       #  run: sed -i 's/git@github.com:/https:\/\/${{ secrets.ACCESS_TOKEN }}@github.com\//g' Package.swift
 
       - name: Check API Stability 
-        run: |
-          echo "{TAG}={git tag | sort --version-sort | tail -n1}" >> "$GITHUB_ENV"
-          echo ${{ env.TAG }}
-          swift package diagnose-api-breaking-changes ${{ env.TAG }}
+        run: swift package diagnose-api-breaking-changes $(git tag | sort --version-sort | tail -n1)
 
