Turn on fetch tags.

--- a/.github/workflows/api-stability.yml
+++ b/.github/workflows/api-stability.yml
@@ -36,6 +36,8 @@ jobs:
 
       - name: Checkout repo
         uses: actions/checkout@v2
+        with:
+          fetch-tags: true
       
       #- name: Reconfigure Private Repo URLs
       #  run: sed -i 's/git@github.com:/https:\/\/${{ secrets.ACCESS_TOKEN }}@github.com\//g' Package.swift
