--- a/.github/workflows/api-stability.yml
+++ b/.github/workflows/api-stability.yml
@@ -41,8 +41,8 @@ jobs:
       
       #- name: Reconfigure Private Repo URLs
       #  run: sed -i 's/git@github.com:/https:\/\/${{ secrets.ACCESS_TOKEN }}@github.com\//g' Package.swift
+      - name: Retrieve Tag
+        run: echo "TAG=$(git tag | sort --version-sort | tail -n1)" >> $GITHUB_OUTPUT
 
       - name: Check API Stability 
-        run: |
-          echo `git tag | sort --version-sort | tail -n1`
-          swift package diagnose-api-breaking-changes `git tag | sort --version-sort | tail -n1`
+        run: swift package diagnose-api-breaking-changes $(git tag | sort --version-sort | tail -n1)
