--- a/.github/workflows/api-stability.yml
+++ b/.github/workflows/api-stability.yml
@@ -42,7 +42,9 @@ jobs:
       #- name: Reconfigure Private Repo URLs
       #  run: sed -i 's/git@github.com:/https:\/\/${{ secrets.ACCESS_TOKEN }}@github.com\//g' Package.swift
       - name: Retrieve Tag
-        run: echo "TAG=$(git tag | sort --version-sort | tail -n1)" >> $GITHUB_OUTPUT
+        #run: echo "TAG=$(git tag | sort --version-sort | tail -n1)" >> $GITHUB_OUTPUT
+        run: echo "TAG=1.0" >> $GITHUB_OUTPUT
+        id: version
 
       - name: Check API Stability 
-        run: swift package diagnose-api-breaking-changes $(git tag | sort --version-sort | tail -n1)
+        run: swift package diagnose-api-breaking-changes ${{ steps.version.outputs.TAG }}
