--- a/.github/workflows/api-stability.yml
+++ b/.github/workflows/api-stability.yml
@@ -37,6 +37,7 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v4
         with:
+          fetch-depth: 0
           fetch-tags: true
       
       #- name: Reconfigure Private Repo URLs
