--- a/.github/workflows/ci-windows.yml
+++ b/.github/workflows/ci-windows.yml
@@ -65,8 +65,8 @@ jobs:
   build_windows:
     strategy:
       matrix:
-        os: [windows-latest, "windows-2022"]
-        swift: ["5.9.2", "5.8.1", "5.7.3"]
+        os: [windows-latest]
+        swift: ["5.9.2"]
         build_mode: ["debug", "release"]
     name: Swift ${{ matrix.swift }} ${{ matrix.build_mode }} on ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
