--- a/.github/workflows/ci-macOS.yml
+++ b/.github/workflows/ci-macOS.yml
@@ -5,6 +5,7 @@ on:
     branches: [development, main]
   pull_request:
     branches: [development, main]
+  workflow_dispatch:
 
 jobs:
   build_macos:
