--- a/.github/workflows/ci-macOS.yml
+++ b/.github/workflows/ci-macOS.yml
@@ -11,7 +11,7 @@ jobs:
   build_macos:
     strategy:
       matrix:
-        os: [macos-13]
+        os: [macos-13, macos-14, macos-latest]
         build_mode: ["debug", "release"]
     name: Swift ${{ matrix.build_mode }} CI for ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
